using SwingHelper to open URLs for changeLog